K8S/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-client
  namespace: monitoring
  labels:
    app: elasticsearch
spec:
  ports:
    - port: 9200
      targetPort: 9200
      name: http
  selector:
    app: elasticsearch

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: monitoring
  labels:
    app: elasticsearch
spec:
  ports:
    - port: 9200
      targetPort: 9200
      name: http
  clusterIP: None
  selector:
    app: elasticsearch
